Refactor(updload): Refatoração do componente

--- a/DocMeeting/src/app/components/upload-arquivo/upload-arquivo.html
+++ b/DocMeeting/src/app/components/upload-arquivo/upload-arquivo.html
@@ -70,7 +70,7 @@
           @if (showHtmlCode) {
             <div class="edit-container">
               <p class="edit-hint code-hint">⚠️ Modo Código: Cuidado com as tags HTML.</p>
-              <textarea [(ngModel)]="selectedMeeting.fullContent" class="editor-textarea"></textarea>
+              <textarea [(ngModel)]="selectedMeeting.fullContent" class="editor-textarea" placeholder="Edite o conteúdo da ata aqui"></textarea>
             </div>
           } @else {
             <div class="edit-container">
