chore(app.html): implementação dos componentes dentro do app sendo componente de notificação e de criação de login por e-mail e senha

--- a/DocMeeting/src/app/app.html
+++ b/DocMeeting/src/app/app.html
@@ -68,3 +68,8 @@
   </footer>
 
 </div>
+
+@if (showAuthModal) {
+  <app-auth-modal (close)="showAuthModal = false"></app-auth-modal>
+}
+<app-toast></app-toast>
