--- a/DocMeeting/src/app/components/upload-arquivo/upload-arquivo.html
+++ b/DocMeeting/src/app/components/upload-arquivo/upload-arquivo.html
@@ -38,7 +38,7 @@
           <tr>
             <td><span class="badge">{{ m.category }}</span></td>
             <td>{{ m.summary }}</td>
-            <td>{{ m.date | date:'dd/MM/yyyy HH:mm' }}</td>
+            <td>{{ m.created_at | date:'dd/MM/yyyy HH:mm' }}</td>
             <td class="actions">
               <button (click)="viewMeeting(m)" class="btn-view" title="Visualizar">👁️</button>
               <button (click)="deleteMeeting(m.id)" class="btn-delete" title="Excluir">🗑️</button>
@@ -77,7 +77,7 @@
           @if (showHtmlCode) {
             <div class="edit-container">
               <p class="edit-hint code-hint">⚠️ Modo Código: Cuidado com as tags HTML.</p>
-              <textarea [(ngModel)]="selectedMeeting.fullContent" class="editor-textarea" placeholder="Edite o conteúdo da ata aqui"></textarea>
+              <textarea [(ngModel)]="selectedMeeting.full_content" class="editor-textarea" placeholder="Edite o conteúdo da ata aqui"></textarea>
             </div>
           } @else {
             <div class="edit-container">
@@ -93,7 +93,7 @@
           }
 
         } @else {
-          <div [innerHTML]="selectedMeeting.fullContent"></div>
+          <div [innerHTML]="selectedMeeting.full_content"></div>
         }
       </div>
   
