feat(app): Injetando nosso componente no app.html

--- a/DocMeeting/src/app/app.html
+++ b/DocMeeting/src/app/app.html
@@ -125,3 +125,4 @@
   <app-auth-modal (close)="showAuthModal = false"></app-auth-modal>
 }
 <app-toast></app-toast>
+<app-dynamic-modal></app-dynamic-modal>
