--- a/DocMeeting/src/app/app.html
+++ b/DocMeeting/src/app/app.html
@@ -120,7 +120,9 @@
   </footer>
 
 </div>
-
+@if (isLoading) {
+  <app-loading [message]="loadingMessage"></app-loading>
+}
 @if (showAuthModal) {
   <app-auth-modal (close)="showAuthModal = false"></app-auth-modal>
 }
