--- a/DocMeeting/src/app/components/auth-modal/auth-modal.html
+++ b/DocMeeting/src/app/components/auth-modal/auth-modal.html
@@ -39,7 +39,7 @@
 
       <button type="submit" class="btn-submit" [disabled]="loading">
         @if (loading) { ⏳ Processando... } 
-        @else { {{ isSignUp ? 'Cadastrar' : 'Enviar Link Mágico' }} }
+        @else { {{ isSignUp ? 'Cadastrar' : 'Enviar Link via E-mail' }} }
       </button>
     </form>
 
